# hass-addons

./: README.md  repository.yaml
.github/workflows/: builder.yaml
ebus-thermostat/: .gitignore  Cargo.toml  Dockerfile  README.md  build.yaml  config.yaml  run.sh
ebus-thermostat/src/: ebusd.rs  homeassistant.rs  main.rs
ebusd-thermostat/: .gitignore  Cargo.toml  Dockerfile  README.md  build.yaml  config.yaml  run.sh
ebusd-thermostat/src/: ebusd.rs  homeassistant.rs  main.rs
example/: Dockerfile  config.yaml  run.sh
