[package]
name = "ebus-thermostat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = { version = "0.23.0", features = ["use-rustls"] }
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros", "sync", "net"] }
tokio-tungstenite = { version = "*", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.11.22", default-features=false, features = ["rustls-tls"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108" }
anyhow = "1.0.75"
futures-util = "0.3.29"
time = { version = "0.3.30", features = ["serde-well-known"] }
env_logger = "0.10.1"
log = "0.4.20"
clap = { version = "4.4.8", features = ["derive"] }
console-subscriber = "0.2.0"
