[package]
name = "ebus-thermostat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = { version = "0.23.5", features = ["logging", "std", "ring"], default-features = false }
rumqttc = { version = "0.25.1", features = ["use-rustls"] }
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros", "sync", "net"] }
tokio-tungstenite = { version = "*", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.13.1", default-features=false, features = ["rustls"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108" }
anyhow = "1.0.75"
futures-util = "0.3.29"
time = { version = "0.3.47", features = ["serde-well-known"] }
env_logger = "0.11.6"
log = "0.4.20"
clap = { version = "4.4.8", features = ["derive"] }
console-subscriber = "0.5.0"
